--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     height: 44px;
     backdrop-filter: blur(10px);
     background: transparent;
+    border: none;
     cursor: pointer;
     align-items: center;
     justify-content: right;
